--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -1911,4 +1911,55 @@
   <data name="TimeOut_Ms" xml:space="preserve">
     <value>시간 초과(ms)</value>
   </data>
+  <data name="SMUSimulator" xml:space="preserve">
+    <value>소스 테이블 시뮬레이터</value>
+  </data>
+  <data name="WaveLengthFile" xml:space="preserve">
+    <value>파장 파일</value>
+  </data>
+  <data name="AmplitudeFile" xml:space="preserve">
+    <value>진폭 파일</value>
+  </data>
+  <data name="IsEnableNd" xml:space="preserve">
+    <value>ND를 활성화하시겠습니까?</value>
+  </data>
+  <data name="ConnectType" xml:space="preserve">
+    <value>연결 방법</value>
+  </data>
+  <data name="Saturation" xml:space="preserve">
+    <value>포화</value>
+  </data>
+  <data name="SetEmissionSP100Config" xml:space="preserve">
+    <value>EmissionSP100 설정</value>
+  </data>
+  <data name="SelectDataFirst" xml:space="preserve">
+    <value>먼저 데이터를 선택해야 합니다.</value>
+  </data>
+  <data name="SelectLicenseFilePrompt" xml:space="preserve">
+    <value>라이센스 파일을 선택해주세요</value>
+  </data>
+  <data name="AddFailed" xml:space="preserve">
+    <value>추가 실패</value>
+  </data>
+  <data name="AddSuccess" xml:space="preserve">
+    <value>성공적으로 추가되었습니다</value>
+  </data>
+  <data name="ExtractionFailed" xml:space="preserve">
+    <value>감압 실패</value>
+  </data>
+  <data name="UpdataSucess" xml:space="preserve">
+    <value>업데이트 성공</value>
+  </data>
+  <data name="UnsupportedLicenseFileExtension" xml:space="preserve">
+    <value>지원되지 않는 라이센스 파일 확장자</value>
+  </data>
+  <data name="AllSpectrumDeviceInfo" xml:space="preserve">
+    <value>모든 분광기 장비 정보</value>
+  </data>
+  <data name="CreateDataBase" xml:space="preserve">
+    <value>데이터베이스 생성</value>
+  </data>
+  <data name="TemplateFailed" xml:space="preserve">
+    <value>템플릿이 실패했습니다</value>
+  </data>
 </root>
